[tool.black]
line-length = 100

[tool.poetry]
name = "vdropbox"
version = "0.2.2"
description = "Utilities to read/write python objects to/from dropbox"
authors = ["Arnau Villoro <arnau@villoro.com>"]
maintainers = ["Arnau Villoro <arnau@villoro.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/villoro/vdropbox"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.6.1"
dropbox = "^10.2.0"
pandas = "^1.1.4"
oyaml = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
