[project]
name = "vdropbox"
version = "1.0.2"
description = "Utilities to read/write python objects to/from dropbox"
authors = [{ name = "Arnau Villoro", email = "arnau@villoro.com" }]
maintainers = [{ name = "Arnau Villoro", email = "arnau@villoro.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "dropbox>=12.0.2",
    "loguru>=0.7.3",
    "oyaml>=1.0",
    "pandas>=2.2.3",
]
