[project]
name = "vdropbox"
version = "2.0.0"
description = "Utilities to read/write python objects to/from dropbox"
authors = [{ name = "Arnau Villoro", email = "arnau@villoro.com" }]
maintainers = [{ name = "Arnau Villoro", email = "arnau@villoro.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "backoff>=2.2.1",
    "dropbox>=12.0.2",
    "loguru>=0.7.3",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vdropbox"]

[project.optional-dependencies]
pandas = ["pandas>=2.2.3"]

[dependency-groups]
dev = [
    "pandas>=2.2.3",
    "pyarrow>=17.0.0",
    "openpyxl>=3.1.0",
    "pytest>=8.0.0",
]
